<resources>
    <string name="app_name">Expenses Sheet</string>
    <string name="sheet_tab_persons">Persons!A:A</string>
    <string name="sheet_tab_category">Categories!A:A</string>
    <string name="sheet_tab_expensive_insert">Transactions!A:G</string>
    <string name="sheet_tab_expensive_load">Transactions!A:G</string>
    <string name="sheet_tab_category_name">Categories</string>
    <string name="sheet_tab_entry_name">Transactions</string>
    <string name="sheet_tab_persons_name">Persons</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_movimentos">Transactions</string>
    <string name="draw_image">draw</string>
    <string name="select_items">Procurar</string>
    <string name="title_activity_sheet">SheetActivity</string>
    <string name="title_categorias">Categories</string>
    <string name="title_movimentos">Transactions</string>
    <string name="title_pessoas">Persons</string>
    <string name="welcome_message">Hello, this application saves all the data in a Google Spreadsheet.\n\nIt is possible to create several sheets and also share with someone if you want to make it a joint sheet.\n\nTherefore, access to the google drive, local where the sheets will be kept privately.</string>
    <string name="welcome_item_options">Swipe Left to access the edit and delete options</string>
    <string name="error_share">There was an error sending the invite!</string>
    <string name="sucess_share">Invitation sent!</string>
    <string name="global_error">An error has occurred!</string>
    <string name="dialog_share_title">Share sheet</string>
    <string name="dialog_share_positive_button">Share</string>
    <string name="close_button">Close</string>
    <string name="cancel_button">Cancel</string>
    <string name="dialog_share_submit">Sharing&#8230;</string>
    <string name="dialog_create_sheet_title">Creating sheet</string>
    <string name="add_button">Add</string>
    <string name="confirm_button">Confirm</string>
    <string name="dialog_new_sheet_title">Add Sheet</string>
    <string name="dialog_welcome_title">Welcome</string>
    <string name="dialog_welcome_tip">Tip</string>
    <string name="dialog_welcome_next">Next</string>
    <string name="dialog_loading">Loading</string>
    <string name="dialog_import_sheet_title">Which sheet to import?</string>
    <string name="dialog_import_options_title">Which sheet do you want to import from?</string>
    <string name="dialog_delete_entry">Delete Transaction</string>
    <string name="dialog_delete_entry_message">Do you want to delete this transaction?</string>
    <string name="dialog_delete_generic">Delete</string>
    <string name="dialog_delete_generic_message">Do you want to delete?</string>
    <string name="delete_button">Delete</string>
    <string name="dialog_delete_sheet_title">Delete Sheet</string>
    <string name="dialog_delete_sheet_message">Do you want to delete the sheet?</string>
    <string name="dialog_add_category_title">Add Category</string>
    <string name="dialog_delete_entry_title">Delete Transaction</string>
    <string name="dialog_add_entry_title">Add Transaction</string>
    <string name="dialog_add_person_title">Add Person</string>
    <string name="dialog_edit_title">Edit</string>
    <string name="dialog_retry_button">Retry</string>
    <string name="error_getting_credentials">There was an error getting access credentials!</string>
    <string name="error_invalid_sheet">Spreadsheet not compatible!!</string>
    <string name="spreadsheet_template_id">1y0ue4gBIM4P4UhOMXrcYPJUnA9Csfc1KUnMxqn54Z34</string>
    <string name="spreadsheet_default_name">Expenses_</string>
    <string name="label_value">Value</string>
    <string name="label_person">Person</string>
    <string name="label_category">Category</string>
    <string name="label_description">Description</string>
    <string name="label_date">Date</string>
    <string name="label_name">Name</string>
    <string name="label_type">Type</string>
    <string name="label_settlement_section_sender_person">Sender</string>
    <string name="label_settlement_section_receiver_person">Recipient</string>
    <string name="label_transaction_type_normal">Simple</string>
    <string name="label_transaction_type_settlement">Settlement</string>
    <string name="title_analytics">Analytics</string>
    <string name="label_period">Period</string>
    <string name="label_initial_date">Initial Date</string>
    <string name="label_final_date">Final Date</string>
    <string name="label_filter">Filter</string>
    <string name="button_label_generate">Generate</string>
    <string name="period_complete">Complete</string>
    <string name="period_year">Year</string>
    <string name="period_interval">Interval</string>
    <string name="period_month">Month</string>
    <string name="label_expand">Expand</string>

</resources>
