<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movimentos">

    <fragment
        android:id="@+id/navigation_movimentos"
        android:name="pt.gon.expensivessheet.ui.movimentos.MovimentosFragment"
        android:label="@string/title_movimentos"
        tools:layout="@layout/fragment_movimentos" />

    <fragment
        android:id="@+id/navigation_analytics"
        android:name="pt.gon.expensivessheet.ui.analytics.AnalyticsFragment"
        android:label="@string/title_analytics"
        tools:layout="@layout/fragment_analytics" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="pt.gon.expensivessheet.ui.categorias.CategoriasFragment"
        android:label="@string/title_categorias"
        tools:layout="@layout/fragment_categorias" />

    <fragment
        android:id="@+id/navigation_persons"
        android:name="pt.gon.expensivessheet.ui.pessoas.PessoasFragment"
        android:label="@string/title_pessoas"
        tools:layout="@layout/fragment_pessoas" />
</navigation>