<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    tools:context=".ui.analytics.AnalyticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                    <TextView
                        style="@style/TextView.InputLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_period" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/input_period_option"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog" />
                </LinearLayout>

            <LinearLayout
                android:id="@+id/periodValueLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/periodYearLayout"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                    <TextView
                        style="@style/TextView.InputLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/period_year" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/input_period_year"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/periodMonthLayout"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                    <TextView
                        style="@style/TextView.InputLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/period_month" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/input_period_month"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog" />
                </LinearLayout>

            </LinearLayout>
                <LinearLayout
                    android:id="@+id/dateCustomLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/dateLayoutInitialPeriod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextView.InputLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_initial_date" />

                        <TextView
                            android:id="@+id/input_initial_date"
                            style="@style/Widget.AppCompat.Spinner.Underlined"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/dateLayoutFinalPeriod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextView.InputLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_final_date" />

                        <TextView
                            android:id="@+id/input_final_date"
                            style="@style/Widget.AppCompat.Spinner.Underlined"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


            </LinearLayout>
            </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/section_settlement"
        android:layout_margin="4dp"
        >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <TextView
                    style="@style/TextView.InputLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_person" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/filter_analytics_person"
                    android:layout_width="match_parent"
                    app:chipSpacingVertical="2dp"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <TextView
                    style="@style/TextView.InputLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_category" />
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/filter_analytics_category"
                    android:layout_width="match_parent"
                    app:chipSpacingVertical="2dp"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
            </LinearLayout>
    </LinearLayout>
        <Button
            android:id="@+id/generateReportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_label_generate" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>